--- a/To-Do-React-Frontend/src/components/Board.css
+++ b/To-Do-React-Frontend/src/components/Board.css
@@ -4,6 +4,7 @@
   display: flex;
   gap: 10px;
   padding: 10px;
+  padding-top: 66px;
   /* Enable horizontal scrolling */
   white-space: nowrap;
 
@@ -284,6 +285,10 @@
 }
 .lists-container{
   display: flex;
+  overflow-x: scroll;
+  height: 100vh;
+  overflow-y: hidden;
+  
 }
 
 .managerName {
@@ -363,13 +368,6 @@
   background-color: #026aa7;
 }
 
-
-.add-list-section {
-  display: flex;
-  align-items: center;
-  margin-top: 10px;
-}
-
 .add-list-input {
   padding: 5px;
   margin-right: 10px;
@@ -391,6 +389,7 @@
   border: none;
   cursor: pointer;
   margin-top: 10px;
+  height: 36px;
 }
 
 
@@ -441,3 +440,4 @@
     box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
   }
 }
+
