--- a/To-Do-React-Frontend/src/components/Projects.css
+++ b/To-Do-React-Frontend/src/components/Projects.css
@@ -1,18 +1,39 @@
 button {
-    background-color: #4CAF50;
+  background-color: #2085ff;
+  border: none;
+  color: white;
+  padding: 8px 11px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+  }
+  .project-icon{
+    background-color: #d5d5d5;
     border: none;
     color: white;
-    padding: 10px 20px;
+    padding: 4px 8px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: 13px;
+    margin: 2px 4px;
     cursor: pointer;
     border-radius: 4px;
-    float: right;
   }
-  
+  .project-wrap{
+    padding: 20px;
+    background: #f2f2f2;
+  }
+
+  .project-list{
+    padding: 78px 11px 0px 11px;
+    box-sizing: border-box;
+    overflow: auto;
+  }
   form {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -32,7 +53,7 @@ button {
   .project-card {
     background-color: #f8f8f8;
     border-radius: 8px;
-    padding: 15px;
+    padding: 10px 14px;
     margin-bottom: 15px;
     display: flex;
     justify-content: space-between;
@@ -45,11 +66,17 @@ button {
   
   .project-info h2 {
     margin-top: 0;
+    font-weight: 500;
+    font-size: 20px;
+  }
+
+  .project-info p{
+    color: #a8a8a8;
   }
   
   .status {
     padding: 5px 10px;
-    border-radius: 15px;
+    border-radius: 6px;
     font-size: 0.8em;
     white-space: nowrap;
   }
@@ -57,19 +84,18 @@ button {
   .status.in-progress {
     background-color: #e6e6fa;
     color: #8a2be2;
+    margin-right: 4px;
   }
   
   .status.pending {
     background-color: #ffe4e1;
     color: #ff4500;
+    margin-right: 4px;
   }
   
   .status.completed {
     background-color: #e0ffff;
     color: #20b2aa;
+    margin-right: 4px;
   }
 
-  .project-list h1{
-    padding-top: 70px;
-    font-size: 20px;
-  }
