--- a/To-Do-React-Frontend/src/components/Projects.css
+++ b/To-Do-React-Frontend/src/components/Projects.css
@@ -26,7 +26,6 @@ button {
   }
   .project-wrap{
     padding: 20px;
-    background: #f2f2f2;
   }
 
   .project-list{
@@ -37,14 +36,29 @@ button {
   form {
     margin-top: 20px;
     margin-bottom: 20px;
-    display: flex;
     flex-direction: column;
+    background: white;
+    padding: 20px;
+    width: 300px;
+  }
+
+  form h2{
+    margin: 12px 0px;
   }
   
   form input, form select {
     margin-bottom: 10px;
     padding: 8px;
     font-size: 16px;
+    padding: 4px 0 5px;
+    border: 0;
+    border-bottom: 1px dotted;
+    display: block;
+    width: 100%;
+    box-sizing: content-box;
+    background: none;
+    color: gray;
+    height: 1.4375em;
   }
   
   form button {
@@ -59,6 +73,7 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-left: 4px solid blue;
   }
   
   .project-info {
