--- a/To-Do-React-Frontend/src/styles/Projects.css
+++ b/To-Do-React-Frontend/src/styles/Projects.css
@@ -1,41 +1,4 @@
 /* Main container */
-.modal-add-project {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content-add-project {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.modal-add-project button {
-  margin-top: 10px;
-  background-color: black;
-  border: none;
-  padding: 5px;
-  color: white;
-  border-radius: 3px;
-}
-
-.update-add-button-project {
-  display: flex;
-  justify-content: space-between;
-}
-
-.manager-project {
-  margin-top: 5px;
-}
-
 .select-users-manager {
   margin-bottom: 5px;
 }
@@ -50,38 +13,44 @@
 
 .pos-fix {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-  background-color: silver;
-  position: relative;
-  align-items: center;
-  padding: 7px;
-  border-radius: 4px;
+    justify-content: space-between;
+    align-items: center;
+    color: #ffffff;
+    padding: 10px 17px;
+    background: #1976d2;
+    margin-top: -7px;
+    text-align: left;
+    font-weight: 700;
+    font-size: 16px;
+    margin-bottom: 25px;
 }
 
 .pos-fix h1 {
+  margin: 0;
+}
+
+h1 {
   text-align: left;
   padding: 1px;
   color: rgb(0, 0, 0);
   font-size: 28px;
   font-weight: 500;
-  padding-left: 20px;
-  margin: 0;
+  padding-left: 26px;
 }
 
 .pos-fix button {
-  padding: 8px 10px;
-  font-size: 16px;
-  background-color: black;
-  color: #fff;
+  padding: 7px 8px;
+  font-size: 14px;
+  background-color: #ffffff;
+  color: #000000;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-weight: 500
 }
 
 .pos-fix button:hover {
-  background-color: rgba(0, 0, 0, 0.422);
+  background-color: #e4e4e4;
 }
 
 /* Project card styles */
@@ -114,7 +83,7 @@
 
 .project-info h2 {
   margin: 0 0 10px;
-  font-size: 19px;
+  font-size: 16px;
   font-weight: 500;
 }
 
@@ -177,7 +146,8 @@
 
 .project-card P {
   display: inline-block;
-  margin-top: -23px;
+  margin-top: -20px;
+  font-size: 13px
 }
 .project-icon {
   background: none;
@@ -241,11 +211,17 @@
   border-radius: 5px;
 }
 
+.button-project{
+  display: flex;
+  justify-content: space-between;
+}
+
 .modal button {
   background-color: #007bff;
-  color: #fff;
-  border: none;
-  cursor: pointer;
+    color: #fff;
+    border: none;
+    padding: 7px 28px;
+    cursor: pointer;
 }
 
 .modal button:hover {
@@ -270,28 +246,52 @@
   margin-right: -50%;
   transform: translate(-50%, -50%);
   background: #fff;
-  padding: 20px;
+  padding: 22px 20px 20px 20px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  width: 100%;
-  height: auto !important;
+  max-width: 331px;
+    width: 100%;
+    height: 120px !important;
 }
-.delete_popup button {
-  padding: 4px 13px;
+.delete_popup .yes {
+  padding: 7px 25px;
   font-size: 13px;
-  background-color: #007bff;
+  background-color: #ff313a;
   color: #fff;
+  border: none;
+  font-weight: 500;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 12px 4px;
+}
+
+.delete_popup .no {
+  padding: 7px 25px;
+  font-size: 13px;
+  background-color: #ffffff;
+  color: #000000;
+  font-weight: 500;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  margin: 4px 4px;
+  margin: 12px 4px;
 }
 
-.delete_popup button:hover {
-  background-color: #0056b3;
+.delete_popup .no:hover {
+  background-color: #e9e9e9;
 }
 
 .delete_popup h2 {
   font-size: 21px;
+  padding: 35px 0px;
+}
+
+
+.css-b62m3t-container{
+  margin-bottom: 10px !important;
+}
+.but-proj{
+  margin-top: -24px;
+  /* margin-left: -11px; */
+  text-align: right;
 }
