--- a/To-Do-React-Frontend/src/styles/UserGroup.css
+++ b/To-Do-React-Frontend/src/styles/UserGroup.css
@@ -2,9 +2,21 @@
   width: 500px;
 }
 
-.table-user-header tr {
-  background-color: black;
-  color: white;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background: white;
+}
+
+th,
+td {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+  text-align: left;
+}
+
+th {
+  background-color: #e9f5ff;
 }
 
 .user-group {
@@ -20,30 +32,30 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-  background-color: silver;
-  position: relative;
-  align-items: center;
-  padding: 7px;
-  border-radius: 4px;
+  background: #1976d2;
+  color: white;
+  padding: 8px;
 }
 
 .header h1 {
   text-align: left;
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 28px;
   font-weight: 500;
   padding-left: 20px;
 }
 
 .user-group .header button {
-  padding: 8px 10px;
-  font-size: 16px;
-  background-color: black;
-  color: #fff;
+  padding: 5px 10px;
+  background-color: #ffffff;
+  color: black;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
+  border-radius: 3px;
+  font-weight: 500;
 }
+
+
 
 table {
   width: 100%;
@@ -99,7 +111,7 @@ td {
 }
 
 .tech {
-  background-color: gainsboro;
+  background-color: rgb(221, 237, 255);
   padding: 4px 12px;
   margin: 2px;
   color: #041958;
