--- a/To-Do-React-Frontend/src/styles/dashboard.css
+++ b/To-Do-React-Frontend/src/styles/dashboard.css
@@ -20,19 +20,16 @@
   padding: 78px 11px 0px 11px;
 }
 
-.dashboard h1 {
+.dashboard h3 {
   text-align: left;
-  background-color: silver;
-  position: relative;
-  align-items: center;
-  padding: 7px;
-  color: black;
-  font-size: 28px;
-  font-weight: 500;
-  padding-left: 26px;
-  border-radius: 4px;
+    padding: 9px;
+    color: rgb(255, 255, 255);
+    /* font-size: 20px; */
+    font-weight: 500;
+    padding-left: 26px;
+    background-color: #1976d2;
+    margin-top: -7px;
 }
-
 .charts {
   display: flex;
   /* gap: 17px; */
