--- a/To-Do-React-Frontend/src/styles/CardDetail.css
+++ b/To-Do-React-Frontend/src/styles/CardDetail.css
@@ -178,7 +178,6 @@
   border-radius: 3px;
   margin-bottom: 10px;
   cursor: pointer;
-  margin-left: 8px;
 }
 
 .sidebar button:hover {
@@ -223,9 +222,10 @@
 }
 
 .sidebar-button button {
-  margin-top: 0.5rem;
+  margin-top: 9px;
   padding: 0.5rem;
   border: none;
+  display: block;
   background-color: #5cb85c;
   color: white;
   border-radius: 4px;
@@ -306,7 +306,7 @@
   cursor: pointer;
   margin-left: 17px;
   color: #ccc;
-  margin-top: -2px;
+  margin-top: -5px;
   color: #9c9c9c;
 }
 
