--- a/To-Do-React-Frontend/src/styles/comment.css
+++ b/To-Do-React-Frontend/src/styles/comment.css
@@ -1,11 +1,17 @@
 .comment-box {
   border: 1px solid #ddd;
   padding: 10px;
-  margin: 10px;
   border-radius: 5px;
+  margin: 5px 0px;
   background-color: #fff;
 }
-
+p{
+  color: black;
+  text-align: left;
+  margin-bottom: 5px;
+  white-space: break-spaces;
+  word-wrap: break-word;
+}
 .comment-header {
   display: flex;
   align-items: center;
@@ -38,6 +44,53 @@
   white-space: break-spaces;
   /* word-wrap: unset; */
   color: black;
+}
+input:target-within{
+  border: 1px solid pink;
+}
+
+.edit-icon-comment .delete-icon-comment{
+  margin-left: 0;
+  cursor: pointer;
+}
+
+textarea{
+  font-family: "LFT Etica", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  color: black;
+    font-weight: 400;
+    display: block;
+    border: none;
+    /* letter-spacing: .4px; */
+    width: 88%;
+    border: 1px solid #e7e7e7;
+    line-height: 1.25;
+    background-color: var(--aard-color-bkgd-default);
+    /* border: 2px solid var(--aard-color-ink-line-ui-default); */
+    /* border-radius: 8px; */
+    height: 70px;
+    padding: 0 12px;
+    resize: none;
+}
+
+input{
+  font-family: "LFT Etica", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  color: black;
+    font-weight: 400;
+    display: block;
+    border: none;
+    /* letter-spacing: .4px; */
+    width: 88%;
+    border: 1px solid #e7e7e7;
+    line-height: 1.25;
+    background-color: var(--aard-color-bkgd-default);
+    /* border: 2px solid var(--aard-color-ink-line-ui-default); */
+    /* border-radius: 8px; */
+    height: 45px;
+    padding: 0 12px;
 }
 
 .comment-footer {
