--- a/To-Do-React-Frontend/src/styles/UserGroup.css
+++ b/To-Do-React-Frontend/src/styles/UserGroup.css
@@ -122,9 +122,10 @@ td {
 
 .status {
   padding: 4px 8px;
-  border-radius: 3px;
+  border-radius: 50px;
   height: 16px;
   font-size: 11px;
+  background-color: oldlace;
 }
 
 .status.engaged {
