--- a/To-Do-React-Frontend/src/styles/Board.css
+++ b/To-Do-React-Frontend/src/styles/Board.css
@@ -319,10 +319,18 @@
 .add-list input {
   margin-bottom: 5px;
   padding: 5px;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid #c8c8c8;
+  margin-right: 3px;
 }
 
 .add-list button {
-  padding: 5px;
+  background: #1976d2;
+    padding: 5px;
+    border: none;
+    border-radius: 3px;
+    color: white;
 }
 
 .add-new-list {
