--- a/To-Do-React-Frontend/src/styles/comment.css
+++ b/To-Do-React-Frontend/src/styles/comment.css
@@ -54,7 +54,7 @@ input:target-within{
   cursor: pointer;
 }
 
-textarea{
+.comment textarea{
   font-family: "LFT Etica", sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -74,7 +74,7 @@ textarea{
     resize: none;
 }
 
-input{
+.new-comment-input{
   font-family: "LFT Etica", sans-serif;
   font-size: 16px;
   font-style: normal;
