--- a/To-Do-React-Frontend/src/styles/Board.css
+++ b/To-Do-React-Frontend/src/styles/Board.css
@@ -1,10 +1,30 @@
 /* src/components/Board.css */
 
+.your-board-title {
+  display: flex;
+  margin-top: 30px;
+  color: white;
+  background-color: #0079bf;
+  /* color: black;
+  background-color: silver; */
+  padding: 7px;
+  position: relative;
+  align-items: center;
+  margin-bottom: 10px;
+  border-radius: 4px;
+}
+
+.your-board-title h1 {
+  font-size: 28px;
+  padding-left: 20px;
+  font-weight: 500;
+}
+
 .board {
   gap: 10px;
   background: #f1f1f1;
   padding: 10px;
-  padding-top: 118px;
+  padding-top: 50px;
   /* Enable horizontal scrolling */
   white-space: nowrap;
 }
@@ -19,7 +39,8 @@
   justify-content: space-between;
   align-items: center;
   padding-left: 5%;
- color: #0079bf;
+  background: transparent;
+  /* background: black; */
 }
 
 .list {
@@ -40,7 +61,8 @@
 }
 
 .list h3 {
-  color:#0079bf;
+  /* color: white; */
+  color: black;
   word-wrap: break-word;
   /* font-weight: normal; */
   font-size: 15px;
@@ -155,6 +177,7 @@
 
 .add-list button {
   padding: 5px;
+  background-color: #0079bf;
 }
 
 .add-new-list {
@@ -291,19 +314,17 @@
 .lists-container {
   display: flex;
   overflow-x: scroll;
-  height: 76vh;
+  height: 100vh;
   overflow-y: hidden;
 }
 
 .managerName {
-  color: #ffffff;
+  color: black;
   padding: 10px 17px;
-  background: #1976d2;
-  margin-top: -44px;
-  text-align: left;
+  margin-top: -12px;
+  text-align: right;
   font-weight: 700;
   font-size: 16px;
-  margin-bottom: 25px;
 }
 
 .add-list-section {
@@ -319,18 +340,12 @@
 .add-list input {
   margin-bottom: 5px;
   padding: 5px;
-  border-radius: 3px;
-  outline: none;
-  border: 1px solid #c8c8c8;
-  margin-right: 3px;
 }
 
 .add-list button {
-  background: #1976d2;
-    padding: 5px;
-    border: none;
-    border-radius: 3px;
-    color: white;
+  padding: 5px;
+  height: 40px;
+  margin-top: 0;
 }
 
 .add-new-list {
@@ -402,12 +417,6 @@
   cursor: pointer;
   margin-top: 10px;
   height: 36px;
-}
-
-.proj-manager{
-  color: gray;
-  font-weight: 500;
-  margin-left: 10px;
 }
 
 @-moz-keyframes splash-12 {
