--- a/To-Do-React-Frontend/src/styles/DetailedDashboard.css
+++ b/To-Do-React-Frontend/src/styles/DetailedDashboard.css
@@ -22,3 +22,9 @@
   width: 92%;
   margin-bottom: 20px;
 }
+
+.Project-dropdown-Details {
+  margin-left: 25px;
+  margin-bottom: 20px;
+  width: 400px;
+}
