--- a/To-Do-React-Frontend/src/styles/Modal.css
+++ b/To-Do-React-Frontend/src/styles/Modal.css
@@ -29,6 +29,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
+  z-index: 111;
   align-items: center;
   animation: fadeIn 0.3s ease-in-out;
 }
@@ -37,10 +38,11 @@
   animation: slideIn 0.3s ease-in-out;
   width: 50%;
   position: relative;
-  top: 27px;
+  top: 0px;
   background-color: white;
-  padding: 40px;
+  padding: 20px 36px;
   border-radius: 10px;
+
 }
 
 .form-group {
