--- a/To-Do-React-Frontend/src/styles/CardDetail.css
+++ b/To-Do-React-Frontend/src/styles/CardDetail.css
@@ -1,4 +1,3 @@
-/* src/components/CardDetail.css */
 .priority-deadline {
   margin-top: 20px;
 }
@@ -7,9 +6,9 @@
   margin-top: 20px;
 }
 
-/* Ensure the comment section doesn't overflow */
 .comment-section .react-comments-section {
   max-width: 100%;
+
   overflow-x: hidden;
 }
 
@@ -178,6 +177,7 @@
   border-radius: 3px;
   margin-bottom: 10px;
   cursor: pointer;
+  margin-left: 8px;
 }
 
 .sidebar button:hover {
@@ -222,10 +222,9 @@
 }
 
 .sidebar-button button {
-  margin-top: 9px;
+  margin-top: 0.5rem;
   padding: 0.5rem;
   border: none;
-  display: block;
   background-color: #5cb85c;
   color: white;
   border-radius: 4px;
@@ -306,7 +305,7 @@
   cursor: pointer;
   margin-left: 17px;
   color: #ccc;
-  margin-top: -5px;
+  margin-top: -2px;
   color: #9c9c9c;
 }
 
@@ -394,8 +393,6 @@
   font-size: 12px;
 }
 
-/* CardDetail.css */
-
 .modal-one {
   position: fixed;
   top: 0;
@@ -411,12 +408,11 @@
 .modal-content-carddetails {
   background-color: white;
   padding: 20px;
-  border-radius: 2px;
+  border-radius: 10px;
   width: 600px;
-  max-height: 90%;
   overflow-y: scroll;
   height: 70vh;
-  scrollbar-color: #fff6 #00000026;
+  scrollbar-width: none;
 }
 
 .close {
