--- a/To-Do-React-Frontend/src/styles/ProjectDropdown.css
+++ b/To-Do-React-Frontend/src/styles/ProjectDropdown.css
@@ -1,5 +1,6 @@
 #project-select{
-    padding: 8px 29px;
+    padding: 8px 29px 8px 14px;
+    font-size: 13px;
 }
 .css-ece9u5{
     margin-right: 10px;
