--- a/To-Do-React-Frontend/src/styles/Projects.css
+++ b/To-Do-React-Frontend/src/styles/Projects.css
@@ -1,4 +1,46 @@
 /* Main container */
+.modal-add-project {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content-add-project {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.modal-add-project button {
+  margin-top: 10px;
+  background-color: black;
+  border: none;
+  padding: 5px;
+  color: white;
+  border-radius: 3px;
+}
+
+.update-add-button-project {
+  display: flex;
+  justify-content: space-between;
+}
+
+.manager-project {
+  margin-top: 5px;
+}
+
+.status-project {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .select-users-manager {
   margin-bottom: 5px;
 }
@@ -13,43 +55,43 @@
 
 .pos-fix {
   display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #ffffff;
-    padding: 10px 17px;
-    background: #1976d2;
-    margin-top: -7px;
-    text-align: left;
-    font-weight: 700;
-    font-size: 16px;
-    margin-bottom: 25px;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  /* background-color: silver; */
+  background-color: #0079bf;
+  position: relative;
+  align-items: center;
+  padding: 7px;
+  border-radius: 4px;
 }
 
 .pos-fix h1 {
+  text-align: left;
+  padding: 1px;
+  color: white;
+  /* color: rgb(0, 0, 0); */
+  font-size: 28px;
+  font-weight: 500;
+  padding-left: 20px;
   margin: 0;
 }
 
-h1 {
-  text-align: left;
-  padding: 1px;
-  color: rgb(0, 0, 0);
-  font-size: 28px;
-  font-weight: 500;
-}
-
 .pos-fix button {
-  padding: 7px 8px;
-  font-size: 14px;
-  background-color: #ffffff;
-  color: #000000;
+  padding: 8px 10px;
+  font-size: 16px;
+  background-color: white;
+  color: black;
+  /* background-color: black; */
+  /* color: #fff; */
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-weight: 500
 }
 
 .pos-fix button:hover {
-  background-color: #e4e4e4;
+  background-color: black;
+  color: white;
 }
 
 /* Project card styles */
@@ -82,7 +124,7 @@ h1 {
 
 .project-info h2 {
   margin: 0 0 10px;
-  font-size: 16px;
+  font-size: 19px;
   font-weight: 500;
 }
 
@@ -145,8 +187,7 @@ h1 {
 
 .project-card P {
   display: inline-block;
-  margin-top: -20px;
-  font-size: 13px
+  margin-top: -23px;
 }
 .project-icon {
   background: none;
@@ -201,47 +242,19 @@ h1 {
 }
 
 .modal input,
-.modal select
- {
+.modal select,
+.modal button {
   margin-bottom: 10px;
   padding: 10px;
   font-size: 16px;
-  width: 100%;
-  box-sizing: border-box;
   border: 1px solid #ddd;
   border-radius: 5px;
 }
 
-.modal h4{
-  margin-bottom: 6px;
-  font-weight: 500;
-  color: #565656;
-}
-
-.button-project{
-  display: flex;
-  justify-content: space-between;
-}
-
-
-
-.add-modal{
+.modal button {
   background-color: #007bff;
   color: #fff;
   border: none;
-  padding: 7px 28px;
-  border-radius: 5px;
-  float:right;
-  cursor: pointer;
-}
-
-.cancel{
-  background-color: #ff0000;
-  color: #fff;
-  border: none;
-  padding: 7px 28px;
-  float: left;
-  border-radius: 5px;
   cursor: pointer;
 }
 
@@ -267,90 +280,28 @@ h1 {
   margin-right: -50%;
   transform: translate(-50%, -50%);
   background: #fff;
-  padding: 22px 20px 20px 20px;
+  padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  max-width: 331px;
-    width: 100%;
-    height: 120px !important;
+  max-width: 400px;
+  width: 100%;
+  height: auto !important;
 }
-.delete_popup .yes {
-  padding: 7px 25px;
+.delete_popup button {
+  padding: 4px 13px;
   font-size: 13px;
-  background-color: #ff313a;
+  background-color: #007bff;
   color: #fff;
   border: none;
-  font-weight: 500;
   border-radius: 5px;
   cursor: pointer;
-  margin: 12px 4px;
+  margin: 4px 4px;
 }
 
-.delete_popup .no {
-  padding: 7px 25px;
-  font-size: 13px;
-  background-color: #ffffff;
-  color: #000000;
-  font-weight: 500;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 12px 4px;
-}
-
-.delete_popup .no:hover {
-  background-color: #e9e9e9;
+.delete_popup button:hover {
+  background-color: #0056b3;
 }
 
 .delete_popup h2 {
   font-size: 21px;
-  padding: 35px 0px;
-}
-
-
-.css-b62m3t-container{
-  margin-bottom: 10px !important;
-}
-.but-proj{
-  margin-top: -24px;
-  /* margin-left: -11px; */
-  text-align: right;
-}
-
-.modal-add-project {
-  position: fixed; 
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start; /* Align to the top */
-  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  backdrop-filter: blur(1px); /* Background blur effect */
-  z-index: 1000; /* Ensure it's on top of other content */
-}
-
-.modal-content-add-project {
-  background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    position: relative;
-    top: 40%;
-    text-align: center;
-}
-
-.add-btn-modal {
-  margin-top: 10px;
-  padding: 8px 18px;
-  background: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.add-btn-modal:hover {
-  background: #0056b3;
 }
