--- a/To-Do-React-Frontend/src/styles/comment.css
+++ b/To-Do-React-Frontend/src/styles/comment.css
@@ -68,7 +68,7 @@ textarea{
     resize: none;
 }
 
-input{
+.comments-section input{
   font-family: "LFT Etica", sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -126,8 +126,4 @@ input{
   padding: 5px 10px;
   border-radius: 5px;
   cursor: pointer;
-}
-
-.comments-section{
-  margin-top: -22px;
 }
