--- a/To-Do-React-Frontend/src/index.css
+++ b/To-Do-React-Frontend/src/index.css
@@ -1,3 +1,33 @@
+
+*::-webkit-scrollbar {
+  height: 5px;
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #DFE9EB;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #c4c4c4;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #4f4f4f;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #62A34B;
+}
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +36,10 @@
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body{
+  min-height: 100vh;
 }
 
 code {
