--- a/To-Do-React-Frontend/src/styles/navbar.css
+++ b/To-Do-React-Frontend/src/styles/navbar.css
@@ -1,42 +1,46 @@
 .hamburger {
   cursor: pointer;
+  margin-left: -19px;
+  position: relative;
+  top: -12px;
 }
-
+ 
 .hamburger input {
   display: none;
 }
-
+ 
 .hamburger svg {
-  height: 4em;
-  width: 35px;
+  /* The size of the SVG defines the overall size */
+  height: 2em;
+  /* Define the transition for transforming the SVG */
   transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+ 
 .line {
   fill: none;
-  stroke: #007bff;
+  stroke: #0079bf;
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 2;
   /* Define the transition for transforming the Stroke */
   transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+              stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+ 
 .line-top-bottom {
   stroke-dasharray: 12 63;
 }
-
+ 
 .hamburger input:checked + svg {
   transform: rotate(-45deg);
 }
-
+ 
 .hamburger input:checked + svg .line-top-bottom {
   stroke-dasharray: 20 300;
   stroke-dashoffset: -32.42;
 }
 
-.css-dt1zdq-MuiContainer-root {
+.css-dt1zdq-MuiContainer-root{
   width: 100%;
   margin-left: auto;
   box-sizing: border-box;
@@ -45,12 +49,19 @@
   padding-left: 5px;
   padding-right: 16px;
   background: white;
-  color: #007bff;
+  color: #0079bf;
 }
-
-.profile-manage {
-  display: flex;
-  position: relative;
+.css-6j84hm-MuiContainer-root {
+  width: 100%;
+  margin-left: auto;
+  box-sizing: border-box;
+  margin-right: auto;
+  display: block;
+  padding-left: 16px;
+  padding-right: 16px;
+  background: white;
+  color: #007BFF;
+  padding: 0px 8px !important;
 }
 
 .css-hip9hq-MuiPaper-root-MuiAppBar-root{
