--- a/To-Do-React-Frontend/src/styles/navbar.css
+++ b/To-Do-React-Frontend/src/styles/navbar.css
@@ -67,3 +67,112 @@
 .css-hip9hq-MuiPaper-root-MuiAppBar-root{
   box-shadow: none !important;
 }
+
+.approve-btn{
+  font-size: 11px !important;
+  margin-top: 11px;
+  width: 10px;
+  padding: 5px;
+  background-color: rgb(189, 189, 189) !important;
+  color: white !important;
+  box-shadow: none !important;
+  border: none;
+  text-transform: none !important;
+}
+
+
+.view-btn{
+  font-size: 11px !important;
+  margin-top: 11px;
+  width: 10px;
+  padding: 5px;
+  background-color: rgb(189, 189, 189) !important;
+  color: white !important;
+  box-shadow: none !important;
+  border: none;
+  text-transform: none !important;
+  outline: none !important;
+}
+
+.details{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.btn-class{
+  margin-top: 10px;
+  margin-left: -1px;
+}
+
+.css-1yptkcg-MuiTypography-root  {
+  margin: 0;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 0.875rem !important;
+  line-height: 8px !important;
+  /* letter-spacing: 0px; */
+  color: gray;
+  font-size: 11px !important;
+}
+
+.css-10wpov9-MuiTypography-root {
+  margin: 0;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 15px !important;
+  line-height: 1.75;
+  letter-spacing: 0.00938em;
+  margin-top: -8px !important;
+}
+
+.css-1qbhj54-MuiButtonBase-root-MuiIconButton-root {
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  background-color: transparent;
+  outline: 0;
+  border: 0;
+  margin: 0;
+  border-radius: 0;
+  padding: 0;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  vertical-align: middle;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  color: inherit;
+  text-align: center;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  font-size: 1.5rem;
+  padding: 8px;
+  border-radius: 50%;
+  overflow: visible;
+  color: rgba(0, 0, 0, 0.54);
+  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  color: inherit;
+  margin-left: 5px;
+  position: relative;
+  margin-right: 10px !important;
+  margin-top: 7px !important;
+}
